# server/docs/swagger-output.json
@@ -151,16 +151,6 @@
     "/api/v1/repos/{id}": {
       "get": {
         "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
         "responses": {
           "default": {
             "description": ""
@@ -170,6 +160,78 @@
     }
   },
   "components": {
+    "parameters": {
+      "IdInPath": {
+        "in": "path",
+        "name": "id",
+        "description": "Request repository id",
+        "required": true,
+        "schema": {
+          "type": "string",
+          "format": "string",
+          "example": "681139148550c69d9796823f"
+        }
+      },
+      "LimitInQuery": {
+        "in": "query",
+        "name": "limit",
+        "description": "Limit of repositories",
+        "required": false,
+        "default": 10,
+        "schema": {
+          "type": "number",
+          "format": "number",
+          "example": 10
+        }
+      },
+      "OffsetInQuery": {
+        "in": "query",
+        "name": "offset",
+        "description": "Offset of repositories",
+        "required": false,
+        "default": 0,
+        "schema": {
+          "type": "number",
+          "format": "number",
+          "example": 0
+        }
+      },
+      "SortInQuery": {
+        "in": "query",
+        "name": "sort",
+        "description": "Sort repositories by field",
+        "required": false,
+        "default": "stargazers_count",
+        "schema": {
+          "type": "string",
+          "format": "string",
+          "example": "stargazers_count"
+        }
+      },
+      "OrderInQuery": {
+        "in": "query",
+        "name": "order",
+        "description": "Order repositories by field",
+        "required": false,
+        "default": "-1",
+        "schema": {
+          "type": "string",
+          "format": "string",
+          "example": "-1"
+        }
+      },
+      "QueryInQuery": {
+        "in": "query",
+        "name": "query",
+        "description": "Query repositories by field",
+        "required": false,
+        "schema": {
+          "type": "string",
+          "format": "string",
+          "example": "smth"
+        }
+      }
+    },
     "schemas": {
       "ResponseAutoSyncEnableSchema": {
         "type": "object",
@@ -212,6 +274,94 @@
             "type": "string",
             "example": "Auto sync timer is refreshed!",
             "description": "Success message for auto sync refresh"
+          }
+        }
+      },
+      "ResponseGetReposListSchema": {
+        "type": "object",
+        "required": ["repositories", "count", "limit", "offset"],
+        "properties": {
+          "repositories": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ResponseGetExactRepoSchema"
+            }
+          },
+          "count": {
+            "type": "number",
+            "example": 10,
+            "description": "Number of repositories"
+          },
+          "limit": {
+            "type": "number",
+            "example": 10,
+            "description": "Limit of repositories"
+          },
+          "offset": {
+            "type": "number",
+            "example": 0,
+            "description": "Offset of repositories"
+          }
+        }
+      },
+      "ResponseGetExactRepoSchema": {
+        "type": "object",
+        "required": [
+          "_id",
+          "full_name",
+          "name",
+          "git_id",
+          "owner_login",
+          "html_url",
+          "description",
+          "stargazers_count",
+          "language"
+        ],
+        "properties": {
+          "_id": {
+            "type": "string",
+            "example": "62e6e5e7b4f5e8f5e8f5e8f5",
+            "description": "Repository ID"
+          },
+          "full_name": {
+            "type": "string",
+            "example": "octocat/Hello-World",
+            "description": "Repository full name"
+          },
+          "name": {
+            "type": "string",
+            "example": "Hello-World",
+            "description": "Repository name"
+          },
+          "git_id": {
+            "type": "number",
+            "example": 1,
+            "description": "Repository ID"
+          },
+          "owner_login": {
+            "type": "string",
+            "example": "octocat",
+            "description": "Repository owner login"
+          },
+          "html_url": {
+            "type": "string",
+            "example": "https://github.com/octocat/Hello-World",
+            "description": "Repository URL"
+          },
+          "description": {
+            "type": "string",
+            "example": "This your first repo!",
+            "description": "Repository description"
+          },
+          "stargazers_count": {
+            "type": "number",
+            "example": 1,
+            "description": "Repository stargazers count"
+          },
+          "language": {
+            "type": "string",
+            "example": "JavaScript",
+            "description": "Repository language"
           }
         }
       },
